syntax = "proto2";

package schema_registry;

service SchemaRegistry {
    rpc AddSchema (NewSchema) returns (Id);
    rpc AddSchemaVersion (NewSchemaVersion) returns (Empty);
    rpc UpdateSchema (SchemaMetadataUpdate) returns (Empty);
    rpc GetSchema (Id) returns (Schema);
    rpc GetSchemaVersions (Id) returns (SchemaVersions);
    rpc GetSchemaDefinition (VersionedId) returns (SchemaDefinition);
    rpc GetSchemaWithDefinitions (Id) returns (SchemaWithDefinitions);
    rpc GetAllSchemas (Empty) returns (Schemas);
    rpc GetAllSchemasWithDefinitions (Empty) returns (SchemasWithDefinitions);
    rpc ValidateValue (ValueToValidate) returns (Errors);
    rpc WatchAllSchemaUpdates (Empty) returns (stream Schema);
}

message NewSchema {
    required SchemaMetadata metadata = 1;
    required bytes definition = 2;
}

message SchemaMetadata {
    required string name = 1;
    required string query_address = 2;
    required string insert_destination = 3;
    required SchemaType.Type type = 4;
}

message SchemaMetadataPatch {
    optional string name = 1;
    optional string query_address = 2;
    optional string insert_destination = 3;
    optional SchemaType.Type type = 4;
}

message Schema {
    required string id = 1;
    required SchemaMetadata metadata = 2;
}

message SchemaWithDefinitions {
    required string id = 1;
    required SchemaMetadata metadata = 2;
    repeated SchemaDefinition definitions = 3;
}

message NewSchemaVersion {
    required string id = 1;
    required SchemaDefinition definition = 2;
}

message SchemaMetadataUpdate {
    required string id = 1;
    required SchemaMetadataPatch patch = 2;
}

message VersionedId {
    required string id = 1;
    optional string version_req = 2;
}

message SchemaDefinition {
    required string version = 1;
    required bytes definition = 2;
}

message Id {
    required string id = 1;
}

message SchemaVersions {
    repeated string versions = 1;
}

message Schemas {
    repeated Schema schemas = 1;
}

message SchemasWithDefinitions {
    repeated SchemaWithDefinitions schemas = 1;
}

message ValueToValidate {
    required VersionedId schema_id = 1;
    required bytes value = 2;
}

message Errors {
    repeated string errors = 1;
}

message SchemaType {
    enum Type {
        DocumentStorage = 0;
        Timeseries = 1;
    }
    required Type schema_type = 1;
}

message Empty {}
